# RoomScanner

./: README.md
files/: bunny.pcd  mesh_greedy.ply
parts/QtVisu/: CMakeLists.txt
parts/QtVisu/src/: CMakeLists.txt  main.cpp  pcl_visualizer.pro  pclviewer.cpp  pclviewer.h  pclviewer.ui
parts/QtVisu/src/Resources/: Resources.qrc
parts/cloudViewer/: cloud_viewer.cpp
parts/fpfh/: CMakeLists.txt  fpfh.cpp  fpfh2.cpp
parts/in_hand_scanner/src/in_hand_scanner/: in_hand_scanner.pro
parts/ndt/: CMakeLists.txt  ndt.cpp
parts/regExample/: CMakeLists.txt  regExample.cpp
parts/registration/: CMakeLists.txt  registration.cpp
parts/triangulation/: CMakeLists.txt  triangulate.cpp
src/: CMakeLists.txt  RoomScanner.cpp  RoomScanner.pro  RoomScanner.pro.user.57c8383  application.cpp  application.cpp.autosave  application.h  application.ui  application.ui.autosave  clicklabel.cpp  clicklabel.h  config.json  defaultparameters.h  filters.cpp  filters.cpp.orig  filters.h  license.txt  main.cpp  mesh.cpp  mesh.cpp.autosave  mesh.h  mytemplate.cpp  mytemplate.h  parameters.h  pcl_visualizer.pro  pclviewer.cpp  pclviewer.ui  pointrepr.h  registration.cpp  registration.cpp.autosave  registration.h  texturing.cpp  texturing.h  types.h
src/Resources/: Resources.qrc  registration-bad.cpp
